# advent-of-code-2022

day-1-task-1/: index.py
day-1-task-2/: index.py
day-2-task-1/: index.py
day-2-task-2/: index.py
day-3-task-1/: index.py
day-3-task-2/: index.py  pyproject.toml
day-4-task-1/: index.py  pyproject.toml
day-4-task-2/: index.py  pyproject.toml
day-5-task-1/: index.py  pyproject.toml
day-5-task-2/: index.py  pyproject.toml
day-6-task-1/: index.py  pyproject.toml
day-6-task-2/: index.py  pyproject.toml
day-7-task-1/: index.py  pyproject.toml
