[tool.poetry]
name = "day-5-task-2"
version = "0.1.0"
description = ""
authors = ["Matt Ripia <matt.ripia@mattr.global>"]
readme = "README.md"
packages = [{include = "day_5_task_2"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
