[tool.poetry]
name = "day-7-task-1"
version = "0.1.0"
description = "day-7-task-1"
authors = ["Matt Ripia <matt.ripia@mattr.global>"]
readme = "README.md"
packages = [{include = "day-7-task-1"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
